test/pkg004/expected
Uncaught error: user error (test.ipkg:10:1: error: a
    filename must be non-empty and
    have no directory
    component, expected: space
<EOF> 
^     )
